tests/paczka2/big_fuzzy/62384869.err
Error in line 3: QgL A131 88,6
Error in line 9: QgL A118 58,6
Error in line 14: dGQ9lyk A284 26,1
Error in line 18: B34T7x A424 68,5
Error in line 21: B34T7x A131 30,6
Error in line 24: A284 A118 31,6
Error in line 31: eerWckmWh A131 ä57,3
Error in line 35: 5HWnrv A118 86,6
Error in line 36: 5HWnrv A131 2,6
Error in line 41: QgL A131 999,1
Error in line 61: QgL A118 15,8
Error in line 56: eerWckmWh A131 187,4
Error in line 64: QgL A424 63,8
Error in line 96: QgL A131 65,7
Error in line 101: 5HWnrv A284 216,75
Error in line 70: RfRVD57om A284 41,8
Error in line 93: 5HWnrv A284 60,3
Error in line 113: QgL A118 85,7
Error in line 118: dGQ9lyk A424 67,3
Error in line 129: 5HWnrv A118 13,4
Error in line 132: RfRVD57om A118 35,6
Error in line 128: B34T7x A284 5,8
Error in line 140: eerWckmWh A118 22,4
Error in line 136: dGQ9lyk A118 77,2
Error in line 147: eerWckmWh A284 90,1
Error in line 155: eerWckmWh A118 84,9
Error in line 154: RfRVD57om A284 7,5
Error in line 169: B34T7x A118 19,8
Error in line 178: B34T7x A131 27,3
Error in line 175: QgL A424 42,1
Error in line 188: RfRVD57om A424 230,6
Error in line 199: eerWckmWh A131 123,7
Error in line 207: dGQ9lyk A424 41,9
Error in line 203: QgL A131 83,2
Error in line 215: 5HWnrv A118 12,6
Error in line 219: 5HWnrv A131 98,3
Error in line 227: 5HWnrv A424 68,5
Error in line 222: eerWckmWh A131 68,9
Error in line 223: A284 A284 98,7
Error in line 236: B34T7x A131 89,1
Error in line 240: dGQ9lyk A118 94,1
Error in line 241: dGQ9lyk A424 28,5
Error in line 235: 5HWnrv A118 86,1
